# C-Study

./: .gitignore  CMakeLists.txt  main.c
01_Variable/: var_study.c  var_study.h
02_Operators/: operators.c  operators.h
03_If_and_Loops/: If_and_Loops.c  if_and_Loops.h
04_Bit/: bit.c  bit.h
